[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fraud-alert-cli"
version = "0.1.0"
description = "CLI tool to flag suspicious transactions using rule and z-score checks."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib",
]

[project.optional-dependencies]
dev = [
    "mypy",
]

[project.scripts]
fraud-alert = "fraud_alert_cli.fraud_alert:main"

[tool.setuptools.packages.find]
include = ["fraud_alert_cli*"]
